<resources>
    <string name="app_name">App_curso_listaCurso</string>
    <string name="txt_titulo">Lista Vip</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso">Nome do Curso</string>
    <string name="txt_hint_edit_telefone_contato">Telefone de Contato</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_finalizar">Finalizar</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_limpar">Limpar</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="btn_sair">sair</string>
    <string name="selecione_um_curso">Selecione um curso</string>


</resources>