<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_whtie"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btn_finalizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="right"
            android:textColor="@color/colorBottons"
            android:backgroundTint="@color/white"
            android:text="@string/btn_sair"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="40dp"
            android:fontFamily="casual"
            android:textColor="@color/colorBottons"
            android:textStyle="bold"
            android:text="@string/txt_titulo"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_primeironome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/txt_hint_edit_primeiro_nome"
            android:inputType="textPersonName"
            android:background="@drawable/background_btn"/>

        <EditText
            android:id="@+id/edit_sobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ems="10"
            android:hint="@string/txt_hint_edit_sobrenome"
            android:inputType="textPersonName"
            android:background="@drawable/background_btn"/>

        <EditText
            android:id="@+id/edit_nomedocurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ems="10"
            android:hint="@string/txt_hint_edit_nome_do_curso"
            android:inputType="textPersonName"
            android:background="@drawable/background_btn"/>

        <EditText
            android:id="@+id/edit_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ems="10"
            android:hint="@string/txt_hint_edit_telefone_contato"
            android:inputType="textPersonName"
            android:background="@drawable/background_btn"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorBottons"
            android:textStyle="bold"
            android:text="@string/selecione_um_curso"

        />
        <Spinner
            android:id="@+id/spinner_list_curso"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_spinner"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorBottons"
                android:text="@string/btn_salvar" />

            <Button
                android:id="@+id/btn_limpar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorBottons"
                android:text="@string/btn_limpar" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>